Regression: missing shortcuts info for some tolsettings (e.g. snap and proportional editing) buttons #103719

Closed
opened 2023-01-07 16:55:56 +01:00 by El · 8 comments

System Information
Operating system: windows 11
Graphics card: laptop rtx3070

Blender Version
Broken: 3.0, 3,5
Worked: 2.93

Caused by 9a76dd2454

Short description of error
When I hover my mouse over the "snap" button, I can't see its shortcut. (same aplies to the proportional editing" button)

3.4.1 2.82
image.png image.png
(this is blender 2.82.7 from THIS YT VID)
Exact steps for others to reproduce the error
Just hover your mouse over the buttons in the header bar
**System Information** Operating system: windows 11 Graphics card: laptop rtx3070 **Blender Version** Broken: 3.0, 3,5 Worked: 2.93 Caused by 9a76dd2454 **Short description of error** When I hover my mouse over the "snap" button, I can't see its shortcut. (same aplies to the proportional editing" button) | 3.4.1 | 2.82 | | -- | -- | | ![image.png](https://archive.blender.org/developer/F14131349/image.png) | ![image.png](https://archive.blender.org/developer/F14131355/image.png) | (this is blender 2.82.7 from [THIS YT VID](https://www.youtube.com/watch?v=Sl_Otq4C9UU)) **Exact steps for others to reproduce the error** Just hover your mouse over the buttons in the header bar
Author

Added subscriber: @eldatch

Added subscriber: @eldatch
Pratik Borhade changed title from missing shortcuts info for snap and proportional editing buttons to Regression: missing shortcuts info for snap and proportional editing buttons 2023-01-09 06:49:11 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Caused by 9a76dd2454

CC @ideasman42

Caused by 9a76dd2454 CC @ideasman42
Philipp Oeser changed title from Regression: missing shortcuts info for snap and proportional editing buttons to Regression: missing shortcuts info for snap and proportional editing buttons 2023-01-09 13:04:28 +01:00
Member

Since 9a76dd2454, this now uses the full path

scene.tool_settings.use_snap

where in the keymap this is defined as

{"properties": [("data_path", 'tool_settings.use_snap')]}

wm_keymap_item_find_in_keymap checks IDProperty len (see IDP_EqualsProperties_ex)

So we either add 'scene.' all over the keymap definition (~50 occurrances) OR strip 'scene.' again?

P3432: T103719_snippet



diff --git a/release/scripts/presets/keyconfig/keymap_data/blender_default.py b/release/scripts/presets/keyconfig/keymap_data/blender_default.py
index b02454cfa86..e9b178312d2 100644
--- a/release/scripts/presets/keyconfig/keymap_data/blender_default.py
+++ b/release/scripts/presets/keyconfig/keymap_data/blender_default.py
@@ -1601,7 +1601,7 @@ def km_view3d(params):
         ("transform.skin_resize", {"type": 'A', "value": 'PRESS', "ctrl": True}, None),
         # Snapping.
         ("wm.context_toggle", {"type": 'TAB', "value": 'PRESS', "shift": True},
-         {"properties": [("data_path", 'tool_settings.use_snap')]}),
+         {"properties": [("data_path", 'scene.tool_settings.use_snap')]}),
         op_panel(
             "VIEW3D_PT_snapping",
             {"type": 'TAB', "value": 'PRESS', "shift": True, "ctrl": True},
@@ -4501,7 +4501,7 @@ def km_object_mode(params):
 
     items.extend([
         *_template_items_proportional_editing(
-            params, connected=False, toggle_data_path='tool_settings.use_proportional_edit_objects'),
+            params, connected=False, toggle_data_path='scene.tool_settings.use_proportional_edit_objects'),
         *_template_items_select_actions(params, "object.select_all"),
         ("object.select_more", {"type": 'NUMPAD_PLUS', "value": 'PRESS', "ctrl": True, "repeat": True}, None),
         ("object.select_less", {"type": 'NUMPAD_MINUS', "value": 'PRESS', "ctrl": True, "repeat": True}, None),
diff --git a/source/blender/editors/interface/interface.cc b/source/blender/editors/interface/interface.cc
index 6728b1e3a41..1a5b3734248 100644
--- a/source/blender/editors/interface/interface.cc
+++ b/source/blender/editors/interface/interface.cc
@@ -1454,6 +1454,15 @@ static bool ui_but_event_property_operator_string(const bContext *C,
     }
   }
 
+  /* Since 9a76dd2454, this now uses the full path
+   * 'scene.tool_settings.use_snap'
+   * where in the keymap this is defined as
+   * {"properties": [("data_path", 'tool_settings.use_snap')]}
+   *
+   * `wm_keymap_item_find_in_keymap` checks `IDProperty` len (see `IDP_EqualsProperties_ex`)
+   *
+   * So we either add 'scene.' all over the keymap definition OR
+   * strip 'scene.' again? */
   char *data_path = WM_context_path_resolve_property_full(C, ptr, prop, prop_index);
 
   /* We have a data-path! */

Even though this is a bit older, will set to High prio since this breaks a key part of discovering shortcuts.

Since 9a76dd2454, this now uses the full path ``` scene.tool_settings.use_snap ``` where in the keymap this is defined as ``` {"properties": [("data_path", 'tool_settings.use_snap')]} ``` `wm_keymap_item_find_in_keymap` checks `IDProperty` len (see `IDP_EqualsProperties_ex`) So we either add 'scene.' all over the keymap definition (~50 occurrances) OR strip 'scene.' again? [P3432: T103719_snippet](https://archive.blender.org/developer/P3432.txt) ``` diff --git a/release/scripts/presets/keyconfig/keymap_data/blender_default.py b/release/scripts/presets/keyconfig/keymap_data/blender_default.py index b02454cfa86..e9b178312d2 100644 --- a/release/scripts/presets/keyconfig/keymap_data/blender_default.py +++ b/release/scripts/presets/keyconfig/keymap_data/blender_default.py @@ -1601,7 +1601,7 @@ def km_view3d(params): ("transform.skin_resize", {"type": 'A', "value": 'PRESS', "ctrl": True}, None), # Snapping. ("wm.context_toggle", {"type": 'TAB', "value": 'PRESS', "shift": True}, - {"properties": [("data_path", 'tool_settings.use_snap')]}), + {"properties": [("data_path", 'scene.tool_settings.use_snap')]}), op_panel( "VIEW3D_PT_snapping", {"type": 'TAB', "value": 'PRESS', "shift": True, "ctrl": True}, @@ -4501,7 +4501,7 @@ def km_object_mode(params): items.extend([ *_template_items_proportional_editing( - params, connected=False, toggle_data_path='tool_settings.use_proportional_edit_objects'), + params, connected=False, toggle_data_path='scene.tool_settings.use_proportional_edit_objects'), *_template_items_select_actions(params, "object.select_all"), ("object.select_more", {"type": 'NUMPAD_PLUS', "value": 'PRESS', "ctrl": True, "repeat": True}, None), ("object.select_less", {"type": 'NUMPAD_MINUS', "value": 'PRESS', "ctrl": True, "repeat": True}, None), diff --git a/source/blender/editors/interface/interface.cc b/source/blender/editors/interface/interface.cc index 6728b1e3a41..1a5b3734248 100644 --- a/source/blender/editors/interface/interface.cc +++ b/source/blender/editors/interface/interface.cc @@ -1454,6 +1454,15 @@ static bool ui_but_event_property_operator_string(const bContext *C, } } + /* Since 9a76dd2454, this now uses the full path + * 'scene.tool_settings.use_snap' + * where in the keymap this is defined as + * {"properties": [("data_path", 'tool_settings.use_snap')]} + * + * `wm_keymap_item_find_in_keymap` checks `IDProperty` len (see `IDP_EqualsProperties_ex`) + * + * So we either add 'scene.' all over the keymap definition OR + * strip 'scene.' again? */ char *data_path = WM_context_path_resolve_property_full(C, ptr, prop, prop_index); /* We have a data-path! */ ``` Even though this is a bit older, will set to High prio since this breaks a key part of discovering shortcuts.
Philipp Oeser changed title from Regression: missing shortcuts info for snap and proportional editing buttons to Regression: missing shortcuts info for some tolsettings (e.g. snap and proportional editing) buttons 2023-01-09 14:54:56 +01:00

This issue was referenced by cff2807aff

This issue was referenced by cff2807affc60fe94e87df19f00c51c5c70713df

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2023-01-11 11:03:23 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103719
No description provided.